# plutoengine

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: .gitignore  Cargo.toml
core/src/: lib.rs
core/src/application/: layer.rs  mod.rs  system.rs
core/src/application/layer/: mod.rs  pluto.rs
core/src/application/layer/pluto/: mod.rs  traversal_chain.rs
core/src/color/: mod.rs
core/src/color/platform/: wgpu.rs
core/src/pluto_base/: mod.rs
core/src/pluto_base/color/platform/: wgpu.rs
core/src/pluto_base/pluto_io/: mod.rs
core/src/pluto_base/runtime/: mod.rs  pluto_runtime.rs
core/src/pluto_base/runtime/platform/winit/: mod.rs
core/src/runtime/: pluto_runtime.rs
core/src/runtime/platform/winit/: wgpu.rs
core_components/: .gitignore
core_components/display/: Cargo.toml
core_components/display/src/: lib.rs
core_components/render/: Cargo.toml
core_components/render/src/: device.rs  instance.rs  lib.rs  mesh.rs  pipeline.rs  render_pass.rs  shader.rs  surface.rs  texture.rs
core_components/window/: Cargo.toml
core_components/window/src/: event_loop.rs  lib.rs  window.rs
core_io/: Cargo.toml
core_io/src/: lib.rs
core_platform/wgpu/: Cargo.toml
core_platform/wgpu/src/: device.rs  instance.rs  lib.rs  mesh.rs  pipeline.rs  shader.rs  surface.rs  texture.rs
core_platform/winit/: Cargo.toml
core_platform/winit/src/: event_loop.rs  lib.rs  window.rs
player/: Cargo.toml
player/assets/plutoengine.base/: shader.wgsl
player/src/: lib.rs  logger.rs  main.rs
scripting/: Cargo.toml
scripting/src/: lib.rs
src/: lib.rs
src/pluto_base/: color.rs  mod.rs
src/pluto_base/color/: mod.rs
src/pluto_base/color/platform/: mod.rs  wgpu.rs
src/pluto_base/pluto_io/: mod.rs
src/pluto_base/render/: mod.rs
src/pluto_base/render/device/: mod.rs
src/pluto_base/render/mesh/: mod.rs
test/: Cargo.toml
test/src/: lib.rs  main.rs
