[package]
name = "pluto_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pe_audio_openal", "pe_render_wgpu", "pe_window_winit"]
pe_audio_openal = []
pe_render_wgpu = []
pe_window_winit = []

[target.'cfg(target_arch = "wasm32")'.features]
default = ["pe_audio_webaudio", "pe_render_wgpu", "pe_window_winit"]
pe_audio_webaudio = []
pe_render_wgpu = []
pe_window_winit = []

[[bin]]
name = "plutotest"
path = "src/bin/main.rs"

[dependencies]
cfg-if = "1"
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2.5"
cgmath = "0.18.0"
bytemuck = { version = "1.9.1", features = [ "derive" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = { version = "0.12", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
