[package]
name = "pluto_engine_player"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_arch = "wasm32")']
crate-type = ["cdylib"]

[dependencies]
bytemuck = { version = "1.11", features = [ "derive" ] }
cfg-if = "1"
env_logger = "0.9"
pollster = "0.2"
pluto_engine = { path = "../core", features = ["pe_render_wgpu", "pe_window_winit"] }
pluto_engine_test = { path = "../test" }

pluto_engine_core_platform_wgpu = { path = "../core_platform/wgpu" }
pluto_engine_core_platform_winit = { path = "../core_platform/winit" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"