[package]
name = "pluto_engine_core_platform_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.12"
raw-window-handle = "0.4"
pollster = "0.2"
smallvec = "1.9"
pluto_engine_render = { path = "../../core_components/render" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.12", features = ["webgl"]}